# financialrag

./: README.md
FinancialIntelligence-1/FinancialIntelligence-1/: main.py  pyproject.toml
FinancialIntelligence-1/FinancialIntelligence-1/utils/: document_processor.py  embeddings.py  generator.py  guardrails.py  retriever.py
